Fix: fexed pfp squash is canvas

--- a/src/app/header-bootstrap/header-bootstrap.component.scss
+++ b/src/app/header-bootstrap/header-bootstrap.component.scss
@@ -172,6 +172,12 @@
     white-space: nowrap;
 }
 
+.username-marquee-container-smol{
+    max-width: 110px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 
 .username{
     display: inline-block;
@@ -279,6 +285,24 @@ input:checked+.slider:before {
         transform: scale(1);
         width: 100%;
         height: 100%;
+    }
+}
+
+@media (max-width: 470px) {
+    .username-marquee-container-smol{
+        max-width: 90px;
+    }
+}
+
+@media (max-width: 435px) {
+    .username-marquee-container-smol{
+        max-width: 65px;
+    }
+}
+
+@media (max-width: 400px) {
+    .username-marquee-container-smol{
+        max-width: 55px;
     }
 }
 
